<resources>

    <string name="app_name">Literary Clock</string>
    <string name="app_share">Share Literary Clock</string>

    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="error">Oh, snap!</string>
    <string name="purchased">Purchased</string>
    <string name="donation_pending">Pending</string>
    <string name="donation_purchase_failed">Couldn\'t start or complete your donation. Please try again.</string>
    <string name="donation_confirmation_failed">Couldn\'t confirm your donation. Please reopen the app when you\'re online.</string>

    <string name="about">About</string>
    <string name="favorites">Favorites</string>
    <string name="about_app_description">Literary Clock represents current time in a form of literature quotes.\n\nThis app could not be possible without help of the author of http://www.literaryclock.com website. Thanks!</string>
    <string name="about_app_description_short">Current time in a form of literature quotes</string>
    <string name="about_app_version__template">version %s</string>
    <string name="about_author">Written by:</string>
    <string name="about_dependencies">Open source libraries</string>
    <string name="about_author_linkedin">Open LinkedIn profile</string>
    <string name="about_author_twitter">Open Twitter profile</string>
    <string name="about_author_instagram">Open Instagram profile</string>

    <string name="donate">Contribute</string>
    <string name="donate_quote">Suggest a quote</string>
    <string name="donate_quote_field_hint">Quote info</string>
    <string name="donate_quote_disclaimer">Note that it takes a lot of time to accept/decline all of the suggestions.</string>
    <string name="donate_quote__sent">Your suggested quote has been sent</string>
    <string name="donate_quote__failed">Failed to send a quote</string>
    <string name="donate_iap">Donate to me</string>

    <string name="settings">Settings</string>
    <string name="settings_reset">Reset</string>
    <string name="settings_follow_system_theme">Follow system theme</string>
    <string name="settings_color_value_default">%1$s (default)</string>
    <string name="settings_dream">Dream</string>
    <string name="settings_dream_customize">Customize dream appearance</string>
    <string name="settings_dream_description">Choose a custom text color and accent color for the screensaver. The accent color applies only to the highlighted time in the quote.</string>
    <string name="settings_dream_text_color">Text color</string>
    <string name="settings_dream_accent_color">Accent color</string>
    <string name="settings_widget">Widget</string>
    <string name="settings_widget_alt_service">Run a background service to update the home-screen widget every one minute</string>
    <string name="settings_widget_color">Primary color</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_auto">Auto</string>

    <string name="main_more_options">More options</string>

    <string name="quote">Quote</string>
    <string name="quote_share">Share a quote</string>
    <string name="bookmark_add">Add to favorites</string>
    <string name="bookmark_remove">Remove from favorites</string>
    <string name="widget_refresh">Refresh widget quote</string>
    <string name="favorites_empty_title">No favorite quotes yet</string>
    <string name="favorites_empty_text">Tap the bookmark button on any quote to save it here.</string>

    <string name="notification_widget_update_service_title" translatable="false">Literary Clock</string>
    <string name="notification_widget_update_service_text">Long click the notification, open app info and turn off the notifications to hide this notification.</string>
    <string name="notification_widget_update_service_channel">Update widget service notification</string>

    <string name="error_quote_empty">Quote info can\'t be empty</string>
    <string name="error_sync_failed">Failed to sync the database of quotes</string>
    <string name="error_activity_not_found">No app can perform this action</string>

    <string name="preview_quote" translatable="false">It was two minutes after ten; she was not satisfied with her clothes, her face, her apartment. She heated the coffee again and sat down in the chair by the window. Can’t do anything more now, she thought, no sense trying to improve anything the last minute.</string>
    <string name="preview_author" translatable="false">Shirley Jackson</string>
    <string name="preview_title" translatable="false">The Daemon Lover</string>

</resources>
