<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="?attr/collapsingToolbarLayoutLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_arrow_left"
                app:title="@string/about" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/appDescTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:autoLink="web"
                android:text="@string/about_app_description"
                android:textAppearance="?textAppearanceBodyMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/appVersionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:textAppearance="?textAppearanceLabelSmall"
                app:layout_constraintEnd_toEndOf="@id/appDescTextView"
                app:layout_constraintStart_toStartOf="@id/appDescTextView"
                app:layout_constraintTop_toBottomOf="@id/appDescTextView"
                tools:text="version 1.3" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/appBarrier"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="appVersionTextView" />

            <View
                android:id="@+id/appDivider"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appBarrier" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/authorAvatarImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="@dimen/frame_margin_horizontal"
                android:layout_marginTop="24dp"
                android:src="@drawable/img_author"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appDivider" />

            <TextView
                android:id="@+id/authorNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Artem Chepurnoy"
                android:textAppearance="?textAppearanceTitleMedium"
                app:layout_constraintBottom_toBottomOf="@id/authorAvatarImageView"
                app:layout_constraintStart_toEndOf="@id/authorAvatarImageView"
                app:layout_constraintTop_toTopOf="@id/authorAvatarImageView" />

            <ImageButton
                android:id="@+id/linkedInBtn"
                style="?borderlessButtonStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_linkedin"
                app:layout_constraintBottom_toBottomOf="@id/authorAvatarImageView"
                app:layout_constraintEnd_toStartOf="@id/twitterBtn"
                app:layout_constraintTop_toTopOf="@id/authorAvatarImageView"
                app:tint="#0077b5" />

            <ImageButton
                android:id="@+id/twitterBtn"
                style="?borderlessButtonStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_twitter"
                app:layout_constraintBottom_toBottomOf="@id/authorAvatarImageView"
                app:layout_constraintEnd_toStartOf="@id/instagramBtn"
                app:layout_constraintTop_toTopOf="@id/authorAvatarImageView"
                app:tint="#1da1f2" />

            <ImageButton
                android:id="@+id/instagramBtn"
                style="?borderlessButtonStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_instagram"
                app:layout_constraintBottom_toBottomOf="@id/authorAvatarImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/authorAvatarImageView"
                app:tint="#405de6" />

            <View
                android:id="@+id/authorDivider"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/authorAvatarImageView" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/appGithubBtn"
                style="@style/Widget.Material3.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="Contribute on GitHub"
                android:textAllCaps="false"
                app:cornerRadius="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/authorDivider"
                app:strokeColor="#4888" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/appShareBtn"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/share"
                android:textAllCaps="false"
                app:cornerRadius="32dp"
                app:icon="@drawable/ic_share"
                app:layout_constraintStart_toEndOf="@id/appGithubBtn"
                app:layout_constraintTop_toBottomOf="@id/authorDivider"
                app:strokeColor="#4888" />

            <TextView
                android:id="@+id/depsLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/frame_margin_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/frame_margin_horizontal"
                android:text="@string/about_dependencies"
                android:textAppearance="?textAppearanceLabelMedium"
                android:textColor="?colorTertiary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appGithubBtn" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/depsRecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/depsLabelTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
